--- a/index.html
+++ b/index.html
@@ -1,158 +1,226 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-  <meta charset="UTF-8">
-  <title>Radar zrážok – Open-Meteo</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <style>
-    html, body, #map {
-      height: 100%;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-    }
-    .leaflet-control-zoom,
-    .leaflet-control-attribution {
-      display: none;
-    }
-    #controls {
-      position: fixed;
-      bottom: 80px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(7,44,78,0.9);
-      padding: 10px 16px;
-      border-radius: 25px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      z-index: 10000;
-    }
-    #controls button {
-      background: #0D3F73;
-      border: none;
-      width: 45px;
-      height: 45px;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: background 0.2s;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    #controls img {
-      width: 22px;
-      height: 22px;
-      filter: invert(1);
-    }
-    #timeBox {
-      position: fixed;
-      bottom: 25px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(7,44,78,0.9);
-      color: white;
-      padding: 8px 20px;
-      border-radius: 12px;
-      font-size: 18px;
-      font-weight: bold;
-      z-index: 10000;
-      font-family: Arial, sans-serif;
-    }
-  </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Radarové informácie | MeteoPočasie.sk</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a4130fa7fd.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/a4130fa7fd.js" crossorigin="anonymous"></script>
+    
+    <style>
+        body { margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
+        #map { width: 100%; height: 100vh; }
+        .controls {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1000;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 10px;
+            border-radius: 8px;
+            display: flex;
+            gap: 10px;
+            align-items: center;
+        }
+        .controls button, .controls select {
+            padding: 8px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+        .slider {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            z-index: 1000;
+        }
+        .slider input[type=range] {
+            width: 100%;
+        }
+        #timestamp {
+            position: absolute;
+            bottom: 5px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0,0,0,0.5);
+            color: #fff;
+            padding: 2px 8px;
+            border-radius: 4px;
+            font-size: 12px;
+            z-index: 1000;
+        }
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 2000;
+        }
+        .modal-content {
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            position: relative;
+            text-align: center;
+        }
+        .modal-close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+            font-size: 18px;
+        }
+        .dark-mode {
+            background: #121212;
+            color: #e0e0e0;
+        }
+    </style>
 </head>
 <body>
-<div id="map"></div>
+    <div id="map"></div>
+    <div class="controls">
+        <button onclick="showPrevFrame()"><i class="fas fa-backward"></i></button>
+        <button id="playPause" onclick="togglePlayPause()"><i class="fas fa-play"></i></button>
+        <button onclick="showNextFrame()"><i class="fas fa-forward"></i></button>
+        <select id="overlaySelect" onchange="changeOverlay(this.value)">
+            <option value="radar">Radar</option>
+            <option value="satellite">Satellite</option>
+            <option value="temperature">Temperature</option>
+        </select>
+        <button onclick="toggleDarkMode()"><i class="fas fa-adjust"></i></button>
+    </div>
+    <div class="slider">
+        <input type="range" id="frameSlider" min="0" max="0" value="0" oninput="showFrame(this.value)">
+    </div>
+    <div id="timestamp"></div>
 
-<div id="controls">
-  <button id="back">⏪</button>
-  <button id="play">▶️</button>
-  <button id="next">⏩</button>
-</div>
-<div id="timeBox">Načítavam čas...</div>
+    <!-- Welcome Modal -->
+    <div id="welcomeModal" class="modal">
+        <div class="modal-content">
+            <span class="modal-close" onclick="closeWelcome()">&times;</span>
+            <h2>Vitajte!</h2>
+            <p>Pre zobrazenie radarových informácií použite ovládacie prvky nad mapou.</p>
+        </div>
+    </div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
-<script>
-  const map = L.map('map', {zoomControl: false, attributionControl: false}).setView([48.7, 19.7], 7);
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script>
+let map;
+let radarLayer;
+let apiData;
+let intervalId;
+let currentFrame = 0;
+let isPlaying = false;
+let optionCombi = 'radar';
 
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-    subdomains: 'abcd',
-    maxZoom: 12
-  }).addTo(map);
-
-  let frames = [];
-  let currentIndex = 0;
-  let playInterval = null;
-  let heatLayer = null;
-
-  const timeBox = document.getElementById("timeBox");
-
-  async function loadData() {
-    const response = await fetch(
-      "https://api.open-meteo.com/v1/forecast?latitude=48.7&longitude=19.7&hourly=precipitation&forecast_days=1"
-    );
-    const data = await response.json();
-    frames = [];
-
-    for (let i = 0; i < data.hourly.time.length; i++) {
-      let time = new Date(data.hourly.time[i]);
-      let rain = data.hourly.precipitation[i];
-
-      // Generovanie bodov okolo Slovenska (jednoduché, nie reálne)
-      let points = [];
-      for (let lat = 47.7; lat <= 49.7; lat += 0.3) {
-        for (let lon = 16.5; lon <= 22.5; lon += 0.3) {
-          let intensity = Math.max(0, rain - Math.random() * 0.5);
-          if (intensity > 0) points.push([lat, lon, intensity / 5]);
-        }
-      }
-      frames.push({time, points});
-    }
-    showFrame(frames.length - 1);
-  }
-
-  function showFrame(index) {
-    if (!frames[index]) return;
-    if (heatLayer) map.removeLayer(heatLayer);
-    heatLayer = L.heatLayer(frames[index].points, {
-      radius: 25,
-      blur: 20,
-      maxZoom: 12,
-      gradient: {
-        0.2: "green",
-        0.5: "yellow",
-        0.8: "red"
-      }
+// Inicializácia mapy
+function initMap() {
+    map = L.map('map').setView([48.1486, 17.1077], 7);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
-    timeBox.textContent = frames[index].time.toLocaleString();
-  }
+    fetchData();
+}
 
-  document.getElementById("back").onclick = () => {
-    currentIndex = (currentIndex - 1 + frames.length) % frames.length;
-    showFrame(currentIndex);
-  };
+// Získanie dát z API (nahradiť vlastným API)
+function fetchData() {
+    fetch('https://api.meteo.example.com/radar')
+        .then(response => response.json())
+        .then(data => {
+            apiData = data;
+            initialize(apiData);    
+        })
+        .catch(error => console.error('Error fetching data:', error));
+}
 
-  document.getElementById("next").onclick = () => {
-    currentIndex = (currentIndex + 1) % frames.length;
-    showFrame(currentIndex);
-  };
+// Inicializácia vrstvy a ovládania
+function initialize(data, type = 'radar') {
+    clearInterval(intervalId);
+    if (radarLayer) map.removeLayer(radarLayer);
+    currentFrame = 0;
+    document.getElementById('frameSlider').max = data[type].length - 1;
+    showFrame(0);
+}
 
-  document.getElementById("play").onclick = () => {
-    if (playInterval) {
-      clearInterval(playInterval);
-      playInterval = null;
-      document.getElementById("play").textContent = "▶️";
+// Zmena prekrytia
+function changeOverlay(value) {
+    optionCombi = value;
+    initialize(apiData, value);
+}
+
+// Zhrnutie: funkcie na prehrávanie a pauzu
+function togglePlayPause() {
+    if (isPlaying) {
+        clearInterval(intervalId);
     } else {
-      playInterval = setInterval(() => {
-        currentIndex = (currentIndex + 1) % frames.length;
-        showFrame(currentIndex);
-      }, 700);
-      document.getElementById("play").textContent = "⏸️";
+        intervalId = setInterval(() => {
+            currentFrame = (currentFrame + 1) % (apiData[optionCombi].length);
+            showFrame(currentFrame);
+        }, 1000);
     }
-  };
+    isPlaying = !isPlaying;
+    updatePlayPauseButton();
+}
 
-  loadData();
+function updatePlayPauseButton() {
+    const btn = document.getElementById('playPause');
+    btn.innerHTML = isPlaying ? '<i class="fas fa-pause"></i>' : '<i class="fas fa-play"></i>';
+}
+
+// Zobrazenie snímku
+function showFrame(position) {
+    if (radarLayer) map.removeLayer(radarLayer);
+    currentFrame = position;
+    const frame = apiData[optionCombi][position];
+    radarLayer = L.imageOverlay(frame.url, [[frame.bounds.south, frame.bounds.west], [frame.bounds.north, frame.bounds.east]], {opacity: 0.7});
+    radarLayer.addTo(map);
+    document.getElementById("frameSlider").value = position;
+    document.getElementById("timestamp").innerText = new Date(frame.timestamp).toLocaleString('sk');
+    document.getElementById("timestamp").style.textAlign = "center";
+    document.getElementById("timestamp").style.fontSize = "12px";
+    updatePlayPauseButton();
+}
+
+function showPrevFrame() {
+    showFrame((currentFrame - 1 + apiData[optionCombi].length) % apiData[optionCombi].length);
+}
+
+function showNextFrame() {
+    showFrame((currentFrame + 1) % apiData[optionCombi].length);
+}
+
+// Manuálne zatvorenie
+function closeWelcome() {
+    const modal = document.getElementById('welcomeModal');
+    if (modal) {
+      modal.style.display = 'none';
+    }
+}
+
+// Tmavý režim
+function toggleDarkMode() {
+    document.body.classList.toggle('dark-mode');
+}
+
+// Spustenie
+initMap();
 </script>
 </body>
 </html>
