--- a/index.html
+++ b/index.html
@@ -3,224 +3,112 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radarové informácie | MeteoPočasie.sk</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a4130fa7fd.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/a4130fa7fd.js" crossorigin="anonymous"></script>
-    
+    <title>Radarové informácie s RainViewer API | MeteoPočasie.sk</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <style>
-        body { margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
-        #map { width: 100%; height: 100vh; }
-        .controls {
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 1000;
-            background: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 8px;
-            display: flex;
-            gap: 10px;
-            align-items: center;
-        }
-        .controls button, .controls select {
-            padding: 8px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-        }
-        .slider {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 80%;
-            z-index: 1000;
-        }
-        .slider input[type=range] {
-            width: 100%;
-        }
-        #timestamp {
-            position: absolute;
-            bottom: 5px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(0,0,0,0.5);
-            color: #fff;
-            padding: 2px 8px;
-            border-radius: 4px;
-            font-size: 12px;
-            z-index: 1000;
-        }
-        .modal {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 2000;
-        }
-        .modal-content {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            position: relative;
-            text-align: center;
-        }
-        .modal-close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-            font-size: 18px;
-        }
-        .dark-mode {
-            background: #121212;
-            color: #e0e0e0;
-        }
+        html, body { margin:0; padding:0; height:100%; }
+        #map { width:100%; height:100%; }
+        .controls { position:absolute; top:10px; left:50%; transform:translateX(-50%); z-index:1000;
+            background: rgba(255,255,255,0.8); padding:10px; border-radius:8px; display:flex; gap:10px; }
+        .controls button, .controls select { padding:8px; border:none; border-radius:4px; cursor:pointer; }
+        #timestamp { position:absolute; bottom:10px; left:50%; transform:translateX(-50%);
+            background:rgba(0,0,0,0.5); color:#fff; padding:4px 8px; border-radius:4px; font-size:12px; z-index:1000; }
     </style>
 </head>
 <body>
     <div id="map"></div>
     <div class="controls">
-        <button onclick="showPrevFrame()"><i class="fas fa-backward"></i></button>
-        <button id="playPause" onclick="togglePlayPause()"><i class="fas fa-play"></i></button>
-        <button onclick="showNextFrame()"><i class="fas fa-forward"></i></button>
-        <select id="overlaySelect" onchange="changeOverlay(this.value)">
-            <option value="radar">Radar</option>
+        <button id="prev"><i class="fas fa-backward"></i></button>
+        <button id="play"><i class="fas fa-play"></i></button>
+        <button id="next"><i class="fas fa-forward"></i></button>
+        <select id="overlaySelect">
+            <option value="radar">Radar (zrážky)</option>
             <option value="satellite">Satellite</option>
-            <option value="temperature">Temperature</option>
         </select>
-        <button onclick="toggleDarkMode()"><i class="fas fa-adjust"></i></button>
     </div>
-    <div class="slider">
-        <input type="range" id="frameSlider" min="0" max="0" value="0" oninput="showFrame(this.value)">
-    </div>
-    <div id="timestamp"></div>
-
-    <!-- Welcome Modal -->
-    <div id="welcomeModal" class="modal">
-        <div class="modal-content">
-            <span class="modal-close" onclick="closeWelcome()">&times;</span>
-            <h2>Vitajte!</h2>
-            <p>Pre zobrazenie radarových informácií použite ovládacie prvky nad mapou.</p>
-        </div>
-    </div>
+    <div id="timestamp">Načítavam...</div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
-let map;
-let radarLayer;
-let apiData;
-let intervalId;
-let currentFrame = 0;
-let isPlaying = false;
-let optionCombi = 'radar';
+        // Inicializácia mapy
+        const map = L.map('map').setView([48.1486, 17.1077], 7);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; OpenStreetMap contributors'
+        }).addTo(map);
 
-// Inicializácia mapy
-function initMap() {
-    map = L.map('map').setView([48.1486, 17.1077], 7);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
-    fetchData();
-}
+        const API_URL = 'https://api.rainviewer.com/public/weather-maps.json';
+        let dataAPI, frames = [], current = 0, timer = null, layer;
 
-// Získanie dát z API (nahradiť vlastným API)
-function fetchData() {
-    fetch('https://api.meteo.example.com/radar')
-        .then(response => response.json())
-        .then(data => {
-            apiData = data;
-            initialize(apiData);    
-        })
-        .catch(error => console.error('Error fetching data:', error));
-}
+        // Načítanie dát z RainViewer API
+        fetch(API_URL)
+            .then(res => res.json())
+            .then(json => {
+                dataAPI = json;
+                updateFrames();
+                initControls();
+                showFrame(0);
+            })
+            .catch(err => console.error('Chyba pri načítaní API:', err));
 
-// Inicializácia vrstvy a ovládania
-function initialize(data, type = 'radar') {
-    clearInterval(intervalId);
-    if (radarLayer) map.removeLayer(radarLayer);
-    currentFrame = 0;
-    document.getElementById('frameSlider').max = data[type].length - 1;
-    showFrame(0);
-}
+        // Zostavenie rámcov podľa vrstvy
+        function updateFrames() {
+            const type = document.getElementById('overlaySelect').value;
+            if (type === 'radar') {
+                // radar frames: past + nowcast
+                frames = [...dataAPI.radar.past, ...dataAPI.radar.nowcast];
+            } else {
+                // satellite infrared
+                frames = dataAPI.satellite.infrared;
+            }
+            current = 0;
+        }
 
-// Zmena prekrytia
-function changeOverlay(value) {
-    optionCombi = value;
-    initialize(apiData, value);
-}
+        // Iniciácia ovládacích prvkov
+        function initControls() {
+            document.getElementById('prev').onclick = () => changeFrame(-1);
+            document.getElementById('next').onclick = () => changeFrame(1);
+            document.getElementById('play').onclick = togglePlay;
+            document.getElementById('overlaySelect').onchange = () => {
+                clearInterval(timer);
+                timer = null;
+                document.getElementById('play').innerHTML = '<i class="fas fa-play"></i>';
+                updateFrames();
+                showFrame(0);
+            };
+        }
 
-// Zhrnutie: funkcie na prehrávanie a pauzu
-function togglePlayPause() {
-    if (isPlaying) {
-        clearInterval(intervalId);
-    } else {
-        intervalId = setInterval(() => {
-            currentFrame = (currentFrame + 1) % (apiData[optionCombi].length);
-            showFrame(currentFrame);
-        }, 1000);
-    }
-    isPlaying = !isPlaying;
-    updatePlayPauseButton();
-}
+        // Zobrazenie konkrétneho rámca
+        function showFrame(idx) {
+            if (layer) map.removeLayer(layer);
+            current = (idx + frames.length) % frames.length;
+            const f = frames[current];
+            const host = dataAPI.host;
+            const path = f.path;
+            // URL pre dlaždice
+            const url = `${host}${path}/256/{z}/{x}/{y}.png`;
+            layer = L.tileLayer(url, { opacity: 0.6, attribution: 'Radar data &copy; RainViewer.com' }).addTo(map);
+            // Zobrazenie časovej značky
+            document.getElementById('timestamp').innerText = new Date(f.time * 1000).toLocaleString('sk');
+        }
 
-function updatePlayPauseButton() {
-    const btn = document.getElementById('playPause');
-    btn.innerHTML = isPlaying ? '<i class="fas fa-pause"></i>' : '<i class="fas fa-play"></i>';
-}
+        // Zmena rámca
+        function changeFrame(delta) {
+            showFrame(current + delta);
+        }
 
-// Zobrazenie snímku
-function showFrame(position) {
-    if (radarLayer) map.removeLayer(radarLayer);
-    currentFrame = position;
-    const frame = apiData[optionCombi][position];
-    radarLayer = L.imageOverlay(frame.url, [[frame.bounds.south, frame.bounds.west], [frame.bounds.north, frame.bounds.east]], {opacity: 0.7});
-    radarLayer.addTo(map);
-    document.getElementById("frameSlider").value = position;
-    document.getElementById("timestamp").innerText = new Date(frame.timestamp).toLocaleString('sk');
-    document.getElementById("timestamp").style.textAlign = "center";
-    document.getElementById("timestamp").style.fontSize = "12px";
-    updatePlayPauseButton();
-}
-
-function showPrevFrame() {
-    showFrame((currentFrame - 1 + apiData[optionCombi].length) % apiData[optionCombi].length);
-}
-
-function showNextFrame() {
-    showFrame((currentFrame + 1) % apiData[optionCombi].length);
-}
-
-// Manuálne zatvorenie
-function closeWelcome() {
-    const modal = document.getElementById('welcomeModal');
-    if (modal) {
-      modal.style.display = 'none';
-    }
-}
-
-// Tmavý režim
-function toggleDarkMode() {
-    document.body.classList.toggle('dark-mode');
-}
-
-// Spustenie
-initMap();
-</script>
+        // Prehrávanie animácie
+        function togglePlay() {
+            const btn = document.getElementById('play');
+            if (timer) {
+                clearInterval(timer);
+                timer = null;
+                btn.innerHTML = '<i class="fas fa-play"></i>';
+            } else {
+                timer = setInterval(() => showFrame(current + 1), 1000);
+                btn.innerHTML = '<i class="fas fa-pause"></i>';
+            }
+        }
+    </script>
 </body>
 </html>
