--- a/index.html
+++ b/index.html
@@ -4,41 +4,25 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Radarové zrážky (RainViewer) | Meteo</title>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
   <style>
     body, html { margin:0; padding:0; height:100%; }
     #map { width:100%; height:100%; }
     .controls {
-      position:absolute;
-      top:10px; left:50%;
-      transform:translateX(-50%);
-      z-index:1000;
-      background: rgba(255,255,255,0.8);
-      padding:10px;
-      border-radius:8px;
-      display:flex;
-      gap:8px;
+      position:absolute; top:10px; left:50%;
+      transform:translateX(-50%); z-index:1000;
+      background: rgba(255,255,255,0.8); padding:10px; border-radius:8px;
+      display:flex; gap:8px;
     }
     .controls button, .controls select {
-      padding:6px 10px;
-      border:none;
-      border-radius:4px;
-      cursor:pointer;
-      font-size:14px;
+      padding:6px 10px; border:none; border-radius:4px;
+      cursor:pointer; font-size:14px;
     }
     #timestamp {
-      position:absolute;
-      bottom:12px; left:50%;
-      transform:translateX(-50%);
-      z-index:1000;
-      background:rgba(0,0,0,0.6);
-      color:#fff;
-      padding:4px 8px;
-      border-radius:4px;
-      font-size:12px;
+      position:absolute; bottom:12px; left:50%;
+      transform:translateX(-50%); z-index:1000;
+      background:rgba(0,0,0,0.6); color:#fff;
+      padding:4px 8px; border-radius:4px; font-size:12px;
     }
   </style>
 </head>
@@ -76,16 +60,16 @@
       })
       .catch(console.error);
 
-    // 2) Z idx selectu vytvoríme pole snímok
+    // 2) Vytvoríme zoznam snímok + URL šablónu
     function buildFrameList() {
       const sel = document.getElementById('overlaySelect').value;
-      // vyber minulé + nowcast
+      // pre radar aj snow sú poles 'past' + 'nowcast'
       const section = apiData[sel];
       const list = (section.past||[]).concat(section.nowcast||[]);
-      // každý frame má time + url template
       frames = list.map(f => ({
         time: f.time,
-        url: apiData.host + f.path + '/{z}/{x}/{y}.png'
+        // farebná škála RAINBOW = index 7, smoothing=1, formát 1_1.png
+        urlTemplate: apiData.host + f.path + '/256/{z}/{x}/{y}/7/1_1.png'
       }));
     }
 
@@ -94,8 +78,7 @@
       document.getElementById('next').onclick = () => changeFrame(1);
       document.getElementById('play').onclick = togglePlay;
       document.getElementById('overlaySelect').onchange = () => {
-        clearInterval(timer);
-        timer = null;
+        clearInterval(timer); timer = null;
         document.getElementById('play').innerHTML = '<i class="fas fa-play"></i>';
         current = 0;
         if (overlayLayer) map.removeLayer(overlayLayer);
@@ -108,8 +91,7 @@
       current = (idx + frames.length) % frames.length;
       const frame = frames[current];
       if (overlayLayer) map.removeLayer(overlayLayer);
-      // vložíme templated URL dlaždíc
-      overlayLayer = L.tileLayer(frame.url, {
+      overlayLayer = L.tileLayer(frame.urlTemplate, {
         tileSize: 256,
         opacity: 0.6,
         zIndex: 500
@@ -123,8 +105,7 @@
     function togglePlay() {
       const btn = document.getElementById('play');
       if (timer) {
-        clearInterval(timer);
-        timer = null;
+        clearInterval(timer); timer = null;
         btn.innerHTML = '<i class="fas fa-play"></i>';
       } else {
         timer = setInterval(() => showFrame(current + 1), 1000);
