--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Radarové zrážky (RainViewer) | Meteo</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Radar zrážok – RainViewer API</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
-    body, html { margin:0; padding:0; height:100%; }
-    #map { width:100%; height:100%; }
+    body, html {margin:0; padding:0; height:100%;}
+    #map {height:100%; width:100%;}
     .controls {
       position:absolute; top:10px; left:50%;
       transform:translateX(-50%); z-index:1000;
-      background: rgba(255,255,255,0.8); padding:10px; border-radius:8px;
-      display:flex; gap:8px;
-    }
-    .controls button, .controls select {
-      padding:6px 10px; border:none; border-radius:4px;
-      cursor:pointer; font-size:14px;
+      background:rgba(255,255,255,0.8);
+      padding:8px; border-radius:6px;
+      display:flex; gap:6px;
     }
     #timestamp {
-      position:absolute; bottom:12px; left:50%;
+      position:absolute; bottom:10px; left:50%;
       transform:translateX(-50%); z-index:1000;
       background:rgba(0,0,0,0.6); color:#fff;
       padding:4px 8px; border-radius:4px; font-size:12px;
@@ -29,88 +26,73 @@
 <body>
   <div id="map"></div>
   <div class="controls">
-    <button id="prev"><i class="fas fa-backward"></i></button>
-    <button id="play"><i class="fas fa-play"></i></button>
-    <button id="next"><i class="fas fa-forward"></i></button>
-    <select id="overlaySelect">
-      <option value="radar">Zrážky</option>
-      <option value="snow">Sneh</option>
+    <button id="prev">⏮</button>
+    <button id="play">▶</button>
+    <button id="next">⏭</button>
+    <select id="layerSelect">
+      <option value="radar">Radar</option>
+      <option value="satellite">Satelit</option>
+      <option value="temperature">Teplota</option>
     </select>
   </div>
   <div id="timestamp">Načítavam…</div>
 
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-  <script src="https://kit.fontawesome.com/a4130fa7fd.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([48.15, 17.11], 7);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+    const map = L.map('map').setView([48.7, 19.7], 7);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap'
     }).addTo(map);
 
-    let apiData, frames = [], current = 0, timer = null, overlayLayer;
+    let apiData, frames=[], current=0, timer=null, overlayLayer;
 
-    // 1) Stiahneme JSON
-    fetch('https://api.rainviewer.com/public/maps.json')
+    // ✅ Použijeme originálny RainViewer public weather-maps JSON
+    fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
         apiData = data;
-        buildFrameList();
+        buildFrames();
         initControls();
         showFrame(0);
-      })
-      .catch(console.error);
+      });
 
-    // 2) Vytvoríme zoznam snímok + URL šablónu
-    function buildFrameList() {
-      const sel = document.getElementById('overlaySelect').value;
-      // pre radar aj snow sú poles 'past' + 'nowcast'
-      const section = apiData[sel];
-      const list = (section.past||[]).concat(section.nowcast||[]);
-      frames = list.map(f => ({
+    function buildFrames(){
+      const sel=document.getElementById("layerSelect").value;
+      const arr=apiData[sel].past.concat(apiData[sel].nowcast||[]);
+      frames = arr.map(f=>({
         time: f.time,
-        // farebná škála RAINBOW = index 7, smoothing=1, formát 1_1.png
-        urlTemplate: apiData.host + f.path + '/256/{z}/{x}/{y}/7/1_1.png'
+        // Presne podľa RainViewer API (paleta rainbow, smoothing 1_1.png)
+        url: apiData.host + f.path + "/256/{z}/{x}/{y}/7/1_1.png"
       }));
     }
 
-    function initControls() {
-      document.getElementById('prev').onclick = () => changeFrame(-1);
-      document.getElementById('next').onclick = () => changeFrame(1);
-      document.getElementById('play').onclick = togglePlay;
-      document.getElementById('overlaySelect').onchange = () => {
-        clearInterval(timer); timer = null;
-        document.getElementById('play').innerHTML = '<i class="fas fa-play"></i>';
-        current = 0;
-        if (overlayLayer) map.removeLayer(overlayLayer);
-        buildFrameList();
-        showFrame(0);
-      };
-    }
-
-    function showFrame(idx) {
-      current = (idx + frames.length) % frames.length;
-      const frame = frames[current];
-      if (overlayLayer) map.removeLayer(overlayLayer);
-      overlayLayer = L.tileLayer(frame.urlTemplate, {
-        tileSize: 256,
-        opacity: 0.6,
-        zIndex: 500
+    function showFrame(i){
+      current = (i+frames.length)%frames.length;
+      if(overlayLayer) map.removeLayer(overlayLayer);
+      overlayLayer=L.tileLayer(frames[current].url,{
+        tileSize:256, opacity:0.6, zIndex:500
       }).addTo(map);
-      document.getElementById('timestamp').innerText =
-        new Date(frame.time * 1000).toLocaleString('sk');
+      document.getElementById("timestamp").innerText =
+        new Date(frames[current].time*1000).toLocaleString("sk");
     }
 
-    function changeFrame(d) { showFrame(current + d); }
+    function changeFrame(d){ showFrame(current+d); }
 
-    function togglePlay() {
-      const btn = document.getElementById('play');
-      if (timer) {
-        clearInterval(timer); timer = null;
-        btn.innerHTML = '<i class="fas fa-play"></i>';
-      } else {
-        timer = setInterval(() => showFrame(current + 1), 1000);
-        btn.innerHTML = '<i class="fas fa-pause"></i>';
-      }
+    function togglePlay(){
+      const btn=document.getElementById("play");
+      if(timer){ clearInterval(timer); timer=null; btn.innerText="▶";}
+      else { timer=setInterval(()=>showFrame(current+1),800); btn.innerText="⏸";}
+    }
+
+    function initControls(){
+      document.getElementById("prev").onclick=()=>changeFrame(-1);
+      document.getElementById("next").onclick=()=>changeFrame(1);
+      document.getElementById("play").onclick=togglePlay;
+      document.getElementById("layerSelect").onchange=()=>{
+        clearInterval(timer); timer=null;
+        document.getElementById("play").innerText="▶";
+        buildFrames(); showFrame(0);
+      };
     }
   </script>
 </body>
