--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="sk">
 <head>
     <meta charset="UTF-8">
-    <title>Slovensko - okresy</title>
+    <title>Slovensko - Okresy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <style>
         html, body {
-            height: 100%;
             margin: 0;
+            padding: 0;
+            height: 100%;
         }
         #map {
+            width: 100%;
             height: 100%;
         }
     </style>
@@ -23,28 +25,32 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
     <script>
-        const map = L.map('map').setView([48.7, 19.7], 7);
+        // Inicializácia mapy
+        var map = L.map('map').setView([48.7, 19.7], 7);
 
-        // Tmavý podklad
+        // Čierny podklad CartoDB Dark Matter
         L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-            attribution: '&copy; OpenStreetMap contributors',
+            attribution: '&copy; OpenStreetMap contributors & CartoDB',
             subdomains: 'abcd',
             maxZoom: 18
         }).addTo(map);
 
-        // Načíta lokálny geojson súbor (funguje len cez server, nie pri otvorení priamo ako file://)
+        // Načítanie lokálneho GeoJSON súboru
         fetch('slovakia_Districts_level_2.geojson')
             .then(response => response.json())
             .then(data => {
                 L.geoJSON(data, {
                     style: {
-                        color: "#00ffff",
+                        color: '#00ffff',       // obrys
                         weight: 1,
-                        fillOpacity: 0.2
+                        fillColor: '#007777',   // výplň
+                        fillOpacity: 0.4
                     }
                 }).addTo(map);
             })
-            .catch(error => console.error("Chyba pri načítaní GeoJSON:", error));
+            .catch(error => {
+                console.error("Chyba pri načítaní GeoJSON:", error);
+            });
     </script>
 </body>
 </html>
